--- a/styles/_services.scss
+++ b/styles/_services.scss
@@ -88,13 +88,19 @@
   }
 
   .services {
+    padding: $consistent-gap 0;
+    .wrapperslim {
+      width: 100% !important;
+    }
     h2 {
+      padding: 0 $consistent-gap;
       font-size: 1.5rem;
     }
     h3 {
       font-size: 2rem;
     }
     ul {
+      padding: 0;
       img {
         margin: $consistent-gap;
       }
